💡update: slack-bot 게시물 작성 완료, image css 일부 변경

--- a/src/global.css
+++ b/src/global.css
@@ -129,7 +129,7 @@
   }
 
   .mdx-content img {
-    @apply max-w-full rounded-lg shadow-md;
+    @apply max-w-full rounded-lg;
   }
 
   .mdx-content table {
