--- a/src/global.css
+++ b/src/global.css
@@ -105,7 +105,7 @@
   }
 
   .mdx-content code {
-    @apply  dark:bg-gray-800 px-1 py-0.5 rounded;
+    @apply  bg-secondary px-1 py-0.5 rounded;
   }
 
   .mdx-content pre {
